quitando lo de las cargar

--- a/index.html
+++ b/index.html
@@ -2,21 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport                                   <tbody>
-                                <tr class="loading-row">
-                                    <td colspan="4">
-                                        <div class="loading-spinner"></div>
-                                        Cargando tabla de sanciones...
-                                    </td>
-                                </tr>
-                            </tbody>             <tbody>
-                                <tr class="loading-row">
-                                    <td colspan="5">
-                                        <div class="loading-spinner"></div>
-                                        Cargando clasificación ofensiva...
-                                    </td>
-                                </tr>
-                            </tbody>t="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calicasas FC - Clasificación Temporada 2026</title>
     <link rel="icon" type="image/webp" href="images/descargar.webp">
     <link rel="shortcut icon" type="image/webp" href="images/descargar.webp">
